<resources>
    <string name="app_name">AwT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="API_KEY">AIzaSyCsKHL9aYMkdDPUSLtcOoASZOwZ_TtMhz8</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_welcome_to_awt">WELCOME TO AWT</string>
    <string name="str_signIn">Sign In</string>
    <string name="str_signup">SignUp</string>
    <string name="str_reset_password">Reset Password</string>
    <string name="str_khana_sab_ka_liye">Khana Sab K Liye</string>
    <string name="str_set_up_your_account">Set up your Profile</string>
    <string name="str_check_the_website">"Let's go to Website "</string>
    <string name="str_already_have_profile">Already have Profile?</string>
    <string name="str_welcome">Welcome!</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_forgot_password">Forgot Password?</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_don_t_have_an_account">Don\'t have an account?</string>
    <string name="str_full_name">Full Name</string>
    <string name="str_phone">Phone</string>
    <string name="str_address">Address</string>
    <string name="str_referral_code">Referral Code(Optional)</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_i_agree_with_the">I agree with the</string>
    <string name="str_terms_and_conditions">Terms and Conditions</string>
    <string name="str_already_have_an_account">Already have an account?</string>
    <string name="str_back_to_login">Back to login</string>
    <string name="str_reset_your_password">Reset Your Password</string>
    <string name="str_home">Home</string>
    <string name="str_about_us">About Us</string>
    <string name="str_our_project">Our Project</string>
    <string name="str_profile">Profile</string>
    <string name="str_orphan_house">Orphan House</string>
    <string name="str_rate_us">Rate Us</string>
    <string name="str_what_are_you_looking_for">What are you looking for?</string>
    <string name="str_dasterkhawan">DasterKhawan</string>
    <string name="str_dasterkhawan_image">Dasterkhawan image</string>
    <string name="str_projects">Our Projects / Services</string>
    <string name="str_graph">Donation Graph</string>
    <string name="str_cnic_number">CNIC Number</string>
    <string name="str_save_profile">Save Profile</string>
    <string name="str_Maps">Maps</string>
    <string name="permission_required">Permission required for app to work properly</string>
    <string name="str_ok">OK</string>
    <string name="str_direction">Direction</string>
    <string name="str_phone_number">phone number</string>
    <string name="str_admin_login">Admin Login</string>
    <string name="str_admin_profile">Admin Profile</string>
    <string name="str_admin_signup">Admin signup</string>
    <string name="str_admin_dashboard">Admin dashboard</string>
    <string name="str_enter_valid_name">Enter a valid name</string>
    <string name="str_enter_valid_email_address">Enter a valid email address</string>
    <string name="str_enter_valid_phone">Enter a valid phone number</string>
    <string name="str_enter_valid_username">Please enter a valid username</string>
    <string name="str_enter_valid_password_policy">Password should be minimum 6 characters long</string>
    <string name="str_enter_valid_address">Enter a valid address</string>
    <string name="str_signup_successfully">Signup Successfully</string>
    <string name="str_invalid_refral_code">invalid referral code</string>
    <string name="str_logout">logout</string>
    <string name="str_otp_verification">OTP Verification</string>
    <string name="str_enter_the_4_digit_code_sent_to_you_at_0323_4004748">Enter the 6–digit code sent to you at</string>
    <string name="str_verify">VERIFY</string>
    <string name="str_resend">Resend</string>
    <string name="str_sdmin_otp_fragment">Admin OTP Fragment</string>
    <string name="str_please_wait">Please Wait</string>
    <string name="str_file_uploading">File uploading</string>
    <string name="str_invalid_cnic">Invalid CNIC</string>
    <string name="str_adminprofile_fragment">Admin Profile Fragment</string>
    <string name="str_services">Services</string>
    <string name="str_invalid_field">Invalid field</string>
    <string name="str_learn_how_to_buy_nft_in_india_all_about_nft_marketplaces">Learn how to buy NFT in India. All about NFT marketplaces</string>
    <string name="str_add_service">Add Service</string>
    <string name="str_service_name">Service Name</string>
    <string name="str_description">Description</string>
    <string name="str_details">Details</string>
    <string name="str_create_service">Create Service</string>
    <string name="str_no_data_found">No Data Found</string>
    <string name="str_donate_now">Donate Now</string>
    <string name="str_total_donation">Total Donation</string>
    <string name="str_dasterkhawan_name">DasterKhawan Name</string>
    <string name="str_dasterkhawan_date">DasterKhawan Date</string>
    <string name="str_date">Date</string>
    <string name="str_start_time">Start Time</string>
    <string name="str_end_time">End Time</string>
    <string name="str_location">Location</string>
    <string name="str_add_dasterkhawan">Add DasterKhawan</string>
    <string name="str_fields_require">Field is required!</string>
    <string name="str_duration">Duration</string>
    <string name="str_save_staff">Save Staff</string>
    <string name="str_staff">Staff</string>
    <string name="str_school_khana">School Khana</string>
    <string name="str_add_school">Add School</string>
    <string name="str_school_name">School Name</string>
    <string name="str_no_internet">No Internet</string>
    <string name="str_please_check_your_connection_status_and_try_again">Please check your connection status and try again</string>
    <string name="str_retry">Retry</string>
    <string name="str_close">Close</string>
    <string name="str_name">Name</string>
    <string name="str_credit_card_number">Credit Card Number</string>
    <string name="str_expire">Expire</string>
    <string name="str_expire_date">expire date</string>
    <string name="str_cvv">CVV</string>
    <string name="str_donate">Donate</string>
    <string name="str_amount">Amount</string>
    <string name="str_turn_on_nfc">NFC is Off</string>
    <string name="str_no_nfc_support">No NFC Support</string>
    <string name="str_digital_card">Digital Card</string>
    <string name="str_scan_the_card_for_activation">Scan the Card for activation</string>


    <string-array name="profile_array">
        <item>Select Service</item>
        <item>Dasterkhawan</item>
        <item>SchoolKhana</item>
        <item>Other Services</item>
    </string-array>


</resources>