<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_home_activity.xml"
    app:startDestination="@id/navigation_admin_login">
    <fragment
        android:id="@+id/navigation_admin_login"
        android:name="com.snakes.awt_android.Fragments.AdminLoginFragment"
        android:label="@string/str_admin_login"
        tools:layout="@layout/fragment_admin_login" />
    <fragment
        android:id="@+id/navigation_admin_otp"
        android:name="com.snakes.awt_android.Fragments.AdminOtpFragment"
        android:label="@string/str_sdmin_otp_fragment"
        tools:layout="@layout/fragment_admin_otp" />
    <fragment
        android:id="@+id/navigation_admin_signup"
        android:name="com.snakes.awt_android.Fragments.AdminSignupFragment"
        android:label="@string/str_admin_signup"
        tools:layout="@layout/fragment_admin_signup" />
    <fragment
        android:id="@+id/navigation_admin_dashboard"
        android:name="com.snakes.awt_android.Fragments.AdminDashBoardFragment"
        android:label="@string/str_admin_dashboard"
        tools:layout="@layout/fragment_admin_dash_board" />
    <fragment
        android:id="@+id/navigation_admin_profile"
        android:name="com.snakes.awt_android.Fragments.AdminProfileFragment"
        android:label="@string/str_adminprofile_fragment"
        tools:layout="@layout/fragment_admin_profile" />
</navigation>