<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.WelcomeFragment"
    android:background="@drawable/img_bg_go">
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:src="@drawable/img_app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"/>
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_welcome_to_awt"
        android:textSize="@dimen/_18ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_100sdp"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_khana_sab_k"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_khana_sab_ka_liye"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_3sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_set_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_set_up_your_account"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:elevation="@dimen/_40sdp"
        android:textColor="@color/white"
        android:background="@drawable/bg_rectangle_dark"
        app:layout_constraintTop_toBottomOf="@+id/tv_khana_sab_k"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_go_to_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_check_the_website"
        android:textAllCaps="false"
        android:elevation="@dimen/_40sdp"
        android:background="@drawable/bg_rectangle_light"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/btn_set_profile"/>
    <TextView
        android:id="@+id/tv_already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_already_have_profile"
        android:textSize="@dimen/_14ssp"
        android:layout_marginBottom="@dimen/_30sdp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_sign_in"/>

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_signIn"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_already_have_account"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>