<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.AdminOtpFragment">
    <TextView
        android:id="@+id/tv_otp_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_otp_verification"
        android:textSize="@dimen/_24ssp"
        android:layout_marginTop="@dimen/_65sdp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_four_digit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_otp_verification"
        android:text="@string/str_enter_the_4_digit_code_sent_to_you_at_0323_4004748"
        app:layout_constraintTop_toBottomOf="@+id/tv_otp_verification"/>
    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otp_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:height="40dp"
        app:width="@dimen/_40sdp"
        app:bar_enabled="true"
        app:bar_height="2dp"
        app:length="6"
        app:otp_text_size="24dp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_four_digit"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_verify"
        android:textSize="@dimen/_16ssp"
        android:padding="@dimen/_7sdp"
        app:cornerRadius="@dimen/_28sdp"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_75sdp"
        android:backgroundTint="@color/app_color"
        app:layout_constraintTop_toBottomOf="@+id/otp_view"/>
    <TextView
        android:id="@+id/tv_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_resend"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@+id/btn_verify"
        app:layout_constraintEnd_toEndOf="@id/btn_verify"
        app:layout_constraintStart_toStartOf="@+id/btn_verify"
        android:layout_marginTop="@dimen/_8sdp" />
</androidx.constraintlayout.widget.ConstraintLayout>