<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DonateActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_3sdp"
        android:background="@color/white_100"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/tv_add_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_donate_now"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_toolbar"/>
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/str_name"
        android:padding="@dimen/_12sdp"
        android:inputType="text"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"/>
    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_amount"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name"/>
    <EditText
        android:id="@+id/et_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/str_amount"
        android:padding="@dimen/_12sdp"
        android:inputType="number"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_amount"/>
    <TextView
        android:id="@+id/tv_card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_credit_card_number"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_amount"/>
    <EditText
        android:id="@+id/et_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="**** **** **** ****"
        android:padding="@dimen/_12sdp"
        android:inputType="number"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/bg_edit_text"
        android:drawablePadding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_number"
        android:drawableLeft="@drawable/ic_mastercard"/>
    <TextView
        android:id="@+id/tv_expire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_expire"
        android:textColor="#596372"
        android:textAlignment="center"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_card_number"/>
    <EditText
        android:id="@+id/et_expire"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/str_expire_date"
        android:padding="@dimen/_10sdp"
        android:inputType="date"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="@id/tv_expire"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_expire"/>
    <TextView
        android:id="@+id/tv_cvv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_cvv"
        android:textColor="#596372"
        android:textAlignment="center"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@id/et_cvv"
        app:layout_constraintTop_toBottomOf="@id/et_card_number"/>
    <EditText
        android:id="@+id/et_cvv"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="cvv"
        android:padding="@dimen/_10sdp"
        android:inputType="number"
        android:maxLength="3"
        android:drawablePadding="@dimen/_5sdp"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintStart_toEndOf="@+id/et_expire"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_7sdp"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_cvv"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Add_payment_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_donate"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        android:backgroundTint="@color/app_color"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/et_expire"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:elevation="@dimen/_40sdp"
        android:background="@color/grey"
        android:visibility="gone">
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_7sdp"
            android:indeterminate="true"
            android:visibility="visible"
            app:indicatorColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>